# CDK-AWS-ML-TAG

./: .gitignore  MANIFEST.in  README.md  app.py  cdk.json  deploy_log.txt  dockerfile  estructura_proyecto.txt  input-data.csv  local_requirements.txt  log.txt  pyproject.toml  requirements.txt  requirements_actuales.txt  setup.py  temporary.txt  test_output_local.csv  trigger_pipeline_sagemaker_sdk.py
Constructors/: base.py  pipeline_factory.py  pipeline_step.py
Stack/: pipeline_stack.py  sagemaker_stack.py
configs/: model_config.yml  model_config_aws.yml  model_config_local.yml
data_project/: app.py  cdk.json  pipeline_stack.py  pyproject.toml  run_pipeline_locally.py  sagemaker_pipelines_app.py
data_project/data_project/: pipelines_stack.py
data_project/pipelines/definitions/: base.py  example_pipeline_definition.py  lead_conversion_pipeline.py
data_project/pipelines/sources/example_pipeline/: simple_step.py
data_project/pipelines/sources/lead_conversion/: evaluate.py
docs/: readme_model.md  readme_model_evaluation_class.md  santiagonotes.txt
image/: Dockerfile  evaluate.py  requirements.txt
infrastructure_project/: app.py  cdk.json  exampletocheck.txt  infrastructure_app.py  project_structure.txt  pyproject.toml
pipelines/: local.ipynb
resources/: cdk.json
sagemaker_pipelines/: app.py  cdk.json  pipeline_stack.py
sagemaker_resources/: app.py  sagemaker_stack.py
stacks/: pipeline_stack.py  sagemaker_stack.py
summaries/: baseline.csv  baseline_backup.csv  baseline_old.csv
temp/: 1data_prep_temp.py  aws.py  compare_pickles.py  docker.py  (+18 more)
(+69 files in other folders)
